# stablinrb

./: .gitignore  CompStability.py  ExploLocalMin.py  NonLinAnalysis.py  OneCase.py  OneCaseLinear.py  OneCaseNonLinear.py  OneCaseStability.py  PlotNonLinNuRa.py  PlotTranslation.py  PlotsCompStability.py  README.md  README.rst  ThreeCasesStability.py  TranslationStability.py  analyzer.py  crit_ra.py  justfile  misc.py  physics.py  planets.py  plotting.py  pyproject.toml  setup.py  stability.py  tox.ini
.github/workflows/: ci.yml  tox.yml
examples/: OneCaseLinear.py  OneCaseNonLinear.py  ThreeCasesStability.py  VarVisc.py  one_case_sph.py
stablinrb/: __init__.py  analyzer.py  cartesian.py  geometry.py  gravity.py  matrix.py  misc.py  nonlin.py  physics.py  plotting.py  ref_prof.py  rheology.py  spherical.py
tests/: test_linear.py  test_nonlin.py
