[build-system]
requires = ["setuptools>=61", "setuptools_scm>=7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stablinrb"
dynamic = ["version"]
description = "Rayleigh-Bénard linear stability analysis"
readme = "README.rst"
authors = [
    {name = "Adrien Morison", email = "adrien.morison@gmail.com"},
    {name = "Stéphane Labrosse"},
]
maintainers = [
    {name = "Adrien Morison", email = "adrien.morison@gmail.com"},
]
license = {file = "LICENSE"}
urls = {homepage = "https://github.com/amorison/stablinrb"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "dmsuite>=0.2,<0.3",
    "numpy>=1.21",
    "scipy>=1.6",
    "matplotlib>=3.6",
]

[tool.setuptools.packages.find]
include = ["stablinrb"]
namespaces = false

[tool.setuptools.package-data]
stablinrb = ["py.typed"]

[tool.setuptools_scm]
write_to = "stablinrb/_version.py"

[tool.mypy]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "mpl_toolkits.*",
    "scipy.*",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
multi_line_output = 3
