[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "stablinrb"
version = "0.1.0"
description = "Rayleigh-Bénard linear stability analysis"
readme = "README.md"
authors = [
    {name = "Adrien Morison", email = "adrien.morison@gmail.com"},
    {name = "Stéphane Labrosse"},
]
maintainers = [
    {name = "Adrien Morison", email = "adrien.morison@gmail.com"},
]
license = {file = "LICENSE"}
urls = {homepage = "https://github.com/amorison/stablinrb"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "dmsuite~=0.3.0",
    "numpy~=2.0",
    "scipy~=1.13",
    "matplotlib~=3.9",
]

[tool.hatch.build.targets.sdist]
include = ["stablinrb"]

[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "mpl_toolkits.*",
    "scipy.*",
]
ignore_missing_imports = true

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.3",
    "mypy>=1.11.2",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
enableTypeIgnoreComments = true
reportAny = false
reportIgnoreCommentWithoutRule = false
reportImplicitOverride = false
reportImportCycles = false
reportMissingTypeStubs = false
reportPrivateUsage = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnusedCallResult = false
